Add named singularity profile to enable containerized runs

--- a/nextflow.config
+++ b/nextflow.config
@@ -69,3 +69,12 @@ process {
         container = 'quay.io/biocontainers/python:3.10.4--h12debd9_0'
     }
 }
+
+
+
+profiles {
+    singularity {
+        singularity.enabled = true
+        process.executor = 'local'
+    }
+}
