Refactored main.nf to test fastqc only; added input_fastq param to nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,29 +1,42 @@
 // nextflow.config
 
+// -----------------------------
 // Parameters
+// -----------------------------
 params {
     outdir = 'results'
     genome = 'resources/genomes/hg19_chr8.fa'
+
+    // NEW: Added input_fastq for the main.nf pipeline
+    input_fastq = 'test_data/sample1.fastq'
 }
 
+// -----------------------------
 // Executor configuration
+// -----------------------------
 process.executor = 'local'
 
+// -----------------------------
 // Enable Singularity support
+// -----------------------------
 singularity {
     enabled = true
     autoMounts = true
     runOptions = '--cleanenv'
 }
 
+// -----------------------------
 // Global process settings
+// -----------------------------
 process {
-    container = ''
+    container = ''  // Defaults to no container unless overridden
     errorStrategy = 'retry'
     maxRetries = 2
 }
 
-// Container per process
+// -----------------------------
+// Container per process overrides
+// -----------------------------
 process {
     withName: fastqc_process {
         container = 'quay.io/biocontainers/fastqc:0.11.9--0'
@@ -70,8 +83,9 @@ process {
     }
 }
 
-
-
+// -----------------------------
+// Profile definitions
+// -----------------------------
 profiles {
     singularity {
         singularity.enabled = true
