Set input_fastq param and ensured path is correctly read

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,9 @@ params {
     genome = 'resources/genomes/hg19_chr8.fa'
 
     // NEW: Added input_fastq for the main.nf pipeline
-    input_fastq = 'test_data/sample1.fastq'
+    //input_fastq = 'test_data/sample1.fastq'
+    input_fastq = "${baseDir}/test_data/sample1.fastq"
+
 }
 
 // -----------------------------
